# libbfcp

./: .gitignore  CMakeLists.txt  bfcpal.cpp  bfcpal.h  main.cpp
bfcpmsg/: bfcp_messages.h  bfcp_messages_build.c  bfcp_strings.h
bfcpsrvclt/bfcpclt/: main.cpp
